PostModal as a Service
Now PostModal is served as a Service.

--- a/templates/post-modal.html
+++ b/templates/post-modal.html
@@ -1,7 +1,7 @@
 <ion-modal-view>
 	<ion-header-bar>
 		<h1 class="title">Update Status</h1>
-		<button class="button button-icon ion-android-close" ng-click="closePostModal()"></button>
+		<button class="button button-icon ion-android-close" ng-click="closeModal()"></button>
 	</ion-header-bar>
 	<ion-content>
 		<form ng-submit="doPost()">
