--- a/templates/newsfeed.html
+++ b/templates/newsfeed.html
@@ -13,7 +13,7 @@
 			<ion-item class="no-border" collection-repeat="post in posts | orderBy: '-id'">
 				<div class="list card no-margin" ui-sref="app.newsfeed-post({postId: post.id})">
 					<div class="item">
-						<div><b class="assertive" ng-if="post.now">NOW! </b><span style="color: #666;">{{post.ago+(post.ago != 'Just now' ? ' ago' : '')}} </span><b>@{{post.op.id}}</b></div>
+						<div><b class="assertive" ng-if="post.now">NOW! </b><span style="color: #666;">{{post.ago+(post.ago != 'Just now' ? ' ago' : '')}} </span><b ng-click="showActionSheet(post.op.id); $event.stopPropagation();">@{{post.op.id}}</b></div>
 					</div>
 					<div class="item item-body dark">
 						<img class="full-image" ng-attr-src="{{post.hasImage ? post.image : ''}}" ng-if="post.hasImage">
