--- a/templates/newsfeed.html
+++ b/templates/newsfeed.html
@@ -13,11 +13,11 @@
 			<ion-item class="no-border" collection-repeat="post in posts | orderBy: '-id'">
 				<div class="list card no-margin" ui-sref="app.newsfeed-post({postId: post.id})">
 					<div class="item">
-						<div><b class="assertive" ng-if="post.now">NOW! </b><span style="color: #666;">{{post.ago+(post.ago != 'Just now' ? ' ago' : '')}} </span><b ng-click="showActionSheet(post.op.id); $event.stopPropagation();">@{{post.op.id}}</b></div>
+						<div><b class="assertive" ng-if="post.now">NOW! </b><span style="color: #666;">{{post.ago+(post.ago != 'Just now' ? ' ago' : '')}} </span><b class="font-black" ng-click="showActionSheet(post.op.id); $event.stopPropagation();">@{{post.op.id}}</b></div>
 					</div>
 					<div class="item item-body dark">
 						<img class="full-image" ng-attr-src="{{post.hasImage ? post.image : ''}}" ng-if="post.hasImage">
-						<p>{{post.content}}</p>
+						<p class="font-black">{{post.content}}</p>
 						<p class="text-right">
 							　<!-- Blank character for space -->
 							<a href="#" class="subdued" ng-if="post.comments.length">{{post.comments.length+' Comment'+(post.comments.length > 1 ? 's' : '')}}</a>
