--- a/templates/notifications.html
+++ b/templates/notifications.html
@@ -2,8 +2,8 @@
 	<ion-content>
 		<ion-list>
 			<ion-item ng-if="notifications.length < 1">No notifications.</ion-item>
-			<ion-item collection-repeat="noti in notifications">
-				{{noti.to}}
+			<ion-item collection-repeat="noti in notifications" ng-click="notificationClicked(noti)">
+				<div ng-bind-html="noti.content"></div>
 			</ion-item>
 		</ion-list>
 	</ion-content>
